--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Deploy JSON Server to Vercel",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "sameh hussein",
   "license": "ISC",
   "dependencies": {
     "json-server": "^1.0.0-beta.1"
