--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Deploy JSON Server to Vercel",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node api/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sameh hussein",
